--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/4.query/10.execution-plan/2.understand-the-execution-plan.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/4.query/10.execution-plan/2.understand-the-execution-plan.md
@@ -2,7 +2,7 @@
 
 The display modes of execution plans vary with the database system. Execution plans in OceanBase Database are displayed in the form of trees. The key to understanding an execution plan is to understand its operators. This topic describes details about common execution plans that contain operators for table access by normal index primary key (TABLE SCAN operator), table access by global index primary key (TABLE LOOKUP operator), or join algorithms (JOIN operator).
 
-## Table access by normal index primary key
+## Table access by index primary key
 
 In OceanBase Database, the table access logic for normal indexes is encapsulated in the `TABLE SCAN` operator. For global indexes, however, the logic of table access by index primary key is completed by the `TABLE LOOKUP` operator.
 
@@ -47,61 +47,46 @@ Outputs & filters:
       range_key([t1.c2(0x7f227decec40)], [t1.c3(0x7f227decf9b0)], [t1.c1(0x7f22fbd1e220)]),
       range(NULL,MAX,MAX ; 1,MIN,MIN),
       range_cond([t1.c2(0x7f227decec40) < 1(0x7f227dece5f0)])
+
+Q3:
+obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY HASH(c1) PARTITIONS 4;
+Query OK, 0 rows affected 
+obclient> CREATE INDEX i2 ON t2(c2) GLOBAL;
+Query OK, 0 rows affected 
+obclient> EXPLAIN SELECT * FROM t2 WHERE c2 = 1;
++------------------------------------------------------------------+
+| Query Plan                                                       |
++------------------------------------------------------------------+
+| ========================================================         |
+| |ID|OPERATOR              |NAME  |EST.ROWS|EST.TIME(us)|         |
+| --------------------------------------------------------         |
+| |0 |DISTRIBUTED TABLE SCAN|t2(i2)|1       |28          |         |
+| ========================================================         |
+| Outputs & filters:                                               |
+| -------------------------------------                            |
+|   0 - output([t2.c1], [t2.c2], [t2.c3]), filter(nil), rowset=256 |
+|       access([t2.c1], [t2.c2], [t2.c3]), partitions(p0)          |
+|       is_index_back=true, is_global_index=true,                  |
+|       range_key([t2.c2], [t2.c1]), range(1,MIN ; 1,MAX),         |
+|       range_cond([t2.c2 = 1])                                    |
++------------------------------------------------------------------+
+   
 ```
 
 In the preceding sample code, the `outputs & filters` section in the execution plan shows in detail the output information of the `TABLE SCAN` operator. The following table describes the parameters in the output information.
 
 | **Information** | **Description** |
-|---------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|---------------------|---------------------|
 | operator | `TABLE SCAN` and `TABLE GET` are the two forms of the `TABLE SCAN` `operator`. <ul><li>`TABLE SCAN` performs a range scan and returns zero or multiple rows of data. </li><li> `TABLE GET` locates a row by using a primary key and returns zero or one row of data.   </li></ul> |
 | name | The index selected for accessing data. The name of the selected index follows the table name. The absence of the index name means that the primary table is scanned.  In OceanBase Database, the primary table has the same structure as the index, and the primary table is an index.  |
 | output | The output columns of the operator.  |
 | filter | The filter predicates of the operator.  In this example, `filter` is set to `nil` because no filter condition is configured for the `TABLE GET` operator in Q1.  |
 | partitions | The partitions to be scanned in the query.  |
 | is_index_back | Indicates whether table access is required by the operator.  In Q1, the primary table is selected. Therefore, table access is not required. In query Q2, where the indexed columns are `c2, c3, and c1`, table access by index primary key is required because the query needs to return column `c4`.  |
+| is_global_index | Indicates whether table access is scanning the global index. This includes scanning global index and lookuping global index . For example, in the Q2 query, the index used is a normal index, so `is_global_index` is `false`. In Q3 query, the `i2` index of `t2` table is used, and the `i2` index is a global index, so `is_global_index` is `true`.|
 | filter_before_indexback | Corresponds to each `filter` and indicates whether the `filter` directly applies to the index or after the TABLE ACCESS BY INDEX PRIMARY KEY operation.  For example, in query Q2, `filter` `c3 < 1`can be directly applied to the index, which reduces the number of TABLE ACCESS BY INDEX PRIMARY KEY operations. However, `filter` `c4 < 1` can be applied only after column `c4` is fetched through table access.  |
 | range_key/range/range_cond | <ul><li>`range_key`: the `rowkey` columns of the index. </li><li> `range`: indicates the start and end positions in an index scan. You can verify whether it is a full table scan based on the value of `range`. For example, in a scenario with three `rowkey` columns, `range(MIN, MIN, MIN; MAX, MAX, MAX)` represents a full table scan.  </li><li> `range_cond`: predicates that determine the start and end positions of an index scan.  </li></ul> |
-
-## Table access by global index primary key
-
-The `TABLE LOOKUP` operator represents the logic of table access by global index primary key.
-
-The following sample code describes an execution plan that contains the `TABLE LOOKUP` operator.
-
-```sql
-obclient> CREATE TABLE t1(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY
-       HASH(c1) PARTITIONS 4;
-Query OK, 0 rows affected
-
-obclient> CREATE INDEX i1 ON t1(c2) GLOBAL;
-Query OK, 0 rows affected
-
-obclient> EXPLAIN SELECT * FROM t1 WHERE c2 = 1\G
-*************************** 1. row ***************************
-Query Plan:
-| ========================================
-|ID|OPERATOR    |NAME  |EST. ROWS|COST |
-----------------------------------------
-|0 |TABLE LOOKUP|t1    |3960     |31065|
-|1 | TABLE SCAN |t1(i1)|3960     |956  |
-========================================
-
-Outputs & filters:
--------------------------------------
-  0 - output([t1.c1], [t1.c2], [t1.c3]), filter(nil),
-      partitions(p[0-3])
-  1 - output([t1.c1]), filter(nil),
-      access([t1.c1]), partitions(p0)
-```
-
-In the preceding example, the No. 1 operator executes the scanning of global index `i1`, and the No. 0 operator specifies to retrieve columns that are not in the global index from the primary table. The `outputs & filters` section in the execution plan shows in detail the output information of the `TABLE LOOKUP` operator. The following table describes the parameters in the output information.
-
-| **Information** | **Description** |
-|------------|---------------------------------------------------------------------------|
-| output | The output columns of the operator.  |
-| filter | The filter predicates of the operator.  In this example, `filter` is set to `nil` because no filter condition is configured for the `TABLE LOOKUP` operator.  |
-| partitions | The partitions to be scanned in the query.  |
-
+    
 ## Join order
 
 `JOIN` operators join data in two tables based on specified conditions. ``Join operations are classified into three types: inner join, outer join, and semi/anti join.
