--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/3.create-trigger-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/3.create-trigger-mysql.md
@@ -16,10 +16,9 @@ trigger_time: { BEFORE | AFTER }
 
 trigger_event: { INSERT | UPDATE | DELETE }
 
+trigger_order: { FOLLOWS | PRECEDES } other_trigger_name
 
 ```
-
-<!--4.1支持 trigger_order: { FOLLOWS | PRECEDES } other_trigger_name-->
 
 `table_name` 指定触发器所关联的表，该表必须是非 `TEMPORARY` 表，不能将触发器与临时表或视图关联。
 
@@ -44,7 +43,7 @@ trigger_event: { INSERT | UPDATE | DELETE }
 
 可以为具有相同触发器事件和操作时间的表定义多个触发器。例如，一个表可以有两个 `BEFORE UPDATE` 触发器。默认情况下，具有相同触发事件和操作时间的触发器将按创建的先后顺序被激活。
 
-<!--4.1支持`trigger_order` 子句可以通过关键字 `FOLLOWS` 和 `PRECEDES` 指定具有相同触发器事件和操作时间的触发器顺序。`FOLLOWS` 关键字表示新触发器将在现有触发器之后激活。`PRECEDES` 关键字表示新触发器在现有触发器之前激活。-->
+`trigger_order` 子句可以通过关键字 `FOLLOWS` 和 `PRECEDES` 指定具有相同触发器事件和操作时间的触发器顺序。`FOLLOWS` 关键字表示新触发器将在现有触发器之后激活。`PRECEDES` 关键字表示新触发器在现有触发器之前激活。
 
 `trigger_body` 是触发器激活时要执行的语句。要执行多个语句，请使用 `BEGIN ... END` 复合语句。
 
