--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/1.table-scan.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/1.table-scan.md
@@ -2,7 +2,7 @@
 
 `TABLE SCAN` 算子是存储层和 SQL 层的接口，用于展示优化器选择哪个索引来访问数据。
 
-在 OceanBase 数据库中，对于普通索引，索引的回表逻辑是封装在 `TABLE SCAN` 算子中的；而对于全局索引，索引的回表逻辑由 `TABLE LOOKUP` 算子完成。
+在 OceanBase 数据库 V4.1.0 版本中，对于普通索引和全局索引，索引回表的逻辑是封装在 `TABLE SCAN` 算子中的；在执行计划展示时，会有 `is_index_back` 标识算子是否需要回表，以及 `is_global_index` 标识算子是否是扫描全局索引。
 
 示例：含 `TABLE SCAN` 算子的执行计划
 
@@ -47,8 +47,31 @@ Outputs & filters:
       range_key([t1.c2(0x7f227decec40)], [t1.c3(0x7f227decf9b0)], [t1.c1(0x7f22fbd1e220)]), 
       range(NULL,MAX,MAX ; 1,MIN,MIN),
       range_cond([t1.c2(0x7f227decec40) < 1(0x7f227dece5f0)])
-```
 
+Q3:
+obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY 
+       HASH(c1) PARTITIONS 4;
+Query OK, 0 rows affected 
+obclient> CREATE INDEX i2 ON t2(c2) GLOBAL;
+Query OK, 0 rows affected 
+obclient> EXPLAIN SELECT * FROM t2 WHERE c2 = 1;
++------------------------------------------------------------------+
+| Query Plan                                                       |
++------------------------------------------------------------------+
+| ========================================================         |
+| |ID|OPERATOR              |NAME  |EST.ROWS|EST.TIME(us)|         |
+| --------------------------------------------------------         |
+| |0 |DISTRIBUTED TABLE SCAN|t2(i2)|1       |28          |         |
+| ========================================================         |
+| Outputs & filters:                                               |
+| -------------------------------------                            |
+|   0 - output([t2.c1], [t2.c2], [t2.c3]), filter(nil), rowset=256 |
+|       access([t2.c1], [t2.c2], [t2.c3]), partitions(p0)          |
+|       is_index_back=true, is_global_index=true,                  |
+|       range_key([t2.c2], [t2.c1]), range(1,MIN ; 1,MAX),         |
+|       range_cond([t2.c2 = 1])                                    |
++------------------------------------------------------------------+
+```
 
 
 上述示例中，执行计划展示中的 `outputs & filters` 详细展示了 `TABLE SCAN` 算子的输出信息如下：
@@ -62,5 +85,6 @@ Outputs & filters:
 | filter                                      | 该算子的过滤谓词。 由于示例中 Q1 查询的 `TABLE GET` 算子没有设置 `filter`，所以为 `nil`。     |
 | partitions                                  | 查询需要扫描的分区。  |
 | is_index_back                               | 该算子是否需要回表。 例如，在 Q1 查询中，因为选择了主表，所以不需要回表。在 Q2 查询中，索引列是 `(c2,c3,c1)`, 由于查询需要返回 `c4` 列，所以需要回表。  |
+| is_global_index                             | 该算子是否是扫描全局索引。例如，在Q2查询中，使用的索引为普通索引，所以`is_global_index` 为 `false` 。在 Q3 查询中，使用了 `t2` 表的 `i2` 索引， `i2` 索引为全局索引，所以 `is_global_index` 为 `true` 。 | 
 | filter_before_indexback                     | 与每个 `filter` 对应，表明该 `filter` 是可以直接在索引上进行计算，还是需要索引回表之后才能计算。 例如，在 Q2 查询中，当 `filter` 为 `c3 < 1` 时， 可以直接在索引上计算，能减少回表数量；当 `filter` 为 `c4 < 1` 时，需要回表取出 `c4` 列之后才能计算。 |
 |  range_key/range/range_cond | <ul><li> `range_key`：索引的 `rowkey` 列。</li>     <li> `range`：索引开始扫描和结束扫描的位置。判断是否是全表扫描需要关注 `range` 的范围。例如，对于一个 `rowkey` 有三列的场景，`range(MIN,MIN, MIN ; MAX, MAX, MAX)` 代表的就是真正意义上的全表扫描。</li>   <li> `range_cond`：决定索引开始扫描和结束扫描位置的相关谓词。</li></ul>    |
