--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
@@ -8,7 +8,7 @@
 
 ## 设置审计规则
 
-通过内置的审计管理用户 `ORAAUDITOR` 可以配置审计规则，包括：
+使用 `ORAAUDITOR` 用户登录到 Oracle 租户。通过内置的审计管理用户 `ORAAUDITOR` 可以配置审计规则，包括：
 
 * 语句审计：对特定的操作进行审计，不指定具体对象，可以指定对具体用户或对所有用户生效。
 * 对象审计：对特定的对象上执行的特定操作进行审计，可以指定对具体用户或对所有用户生效。
