--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -18,7 +18,7 @@
 
 系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群配置项的值。同时，系统租户还可以通过指定 `TENANT` 关键字来查看指定租户的配置项信息。
 
-1. 系统租户或用户租户登录到集群。
+1. 系统租户或用户租户登录到数据库。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
