--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
@@ -34,7 +34,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -158,7 +158,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
 Cancel Delete Server 的具体操作如下：
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
