--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/6.view-system-variables-of-tenant.md
@@ -4,7 +4,7 @@
 
 ## 通过 SHOW 语句查看租户系统变量
 
-1. 使用 `root` 用户登录到集群的用户租户。
+1. 使用 `root` 用户登录集群的用户租户。
 
    以 `mq_t1`  租户为例：
 
@@ -65,7 +65,7 @@
 
 * MySQL 模式
 
-  1. 使用 `root` 用户登录到集群的 `mysql001` 租户。
+  1. 使用 `root` 用户登录集群的 `mysql001` 租户。
 
       ```shell
       obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
@@ -105,7 +105,7 @@
 
 * Oracle 模式
 
-  1. 使用 `sys` 用户登录到集群的 `oracle001` 租户。
+  1. 使用 `sys` 用户登录集群的 `oracle001` 租户。
 
       ```shell
       obclient -h172.30.xx.xx -P2883 -usys@oracle001#cluster -p**** -A
