--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/9.modify-resource-pool-properties.md
@@ -13,7 +13,7 @@
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
