--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
@@ -21,7 +21,7 @@
 
 由于当前仅 `sys` 租户可以删除租户，故仅 `sys` 租户可以将回收站中的租户恢复为正常租户。恢复时可修改租户名称，但不能与已有租户重名，否则系统会报错。
 
-1. `sys` 租户登录到数据库。
+1. `sys` 租户登录到集群。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
