--- a/zh-CN/6.manage/4.high-availability/4.flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/4.flashback-query.md
@@ -49,7 +49,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
 ## MySQL 模式下的闪回查询
 
-1. MySQL 租户登录到数据库。
+1. MySQL 租户登录到集群。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -83,7 +83,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
 ## Oracle 模式下的闪回查询
 
-1. Oracle 租户登录到数据库。
+1. Oracle 租户登录集群。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
