--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -28,7 +28,7 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
 ## 配置示例
 
-1. 使用 root 用户登录到集群的 MySQL 租户。
+1. 使用 root 用户登录集群的 MySQL 租户。
 
    ```shell
    obclient -uroot@mysql -h127.1 -P2881 -p****1***
@@ -64,7 +64,7 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
    ERROR 5039 (01007): User locked
    ```
 
-   使用 `root` 用户登录到数据库的 `MySQL` 租户，查看失败登录信息。
+   使用 `root` 用户登录集群的 `MySQL` 租户，查看失败登录信息。
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
