--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -14,7 +14,7 @@
 
 发起数据备份前，您可以为备份后的备份集设置密码。
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. （可选）执行以下命令，设置备份的密码。
 
@@ -30,7 +30,7 @@
    示例：
 
    ```shell
-   obclient [(none)]> SET ENCRYPTION ON IDENTIFIED BY '******' ONLY；
+   obclient [(none)]> SET ENCRYPTION ON IDENTIFIED BY '******' ONLY;
    ```
 
    <main id="notice" type='explain'>
@@ -48,7 +48,7 @@
 
 `sys` 租户可以对集群中的所有租户或指定租户发起全量数据备份。
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，发起全量数据备份。
 
@@ -80,7 +80,6 @@
       命令执行成功后，在本示例中，系统会对集群中的 `mysql_tenant` 租户发起全量数据备份。
 
    全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度]()。
-  
 
 ### 用户租户发起全量备份
 
@@ -95,9 +94,9 @@
     ```shell
     obclient [(none)]> ALTER SYSTEM BACKUP DATABASE;
     ```
-   
+
    命令执行成功后，系统会对本租户发起全量数据备份。
-   
+
    全量备份过程中，可以实时查看全量备份进度，具体操作请参见 [查看数据备份进度](5.view-data-backup-progress.md)。
 
 ## 相关文档
