--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -77,7 +77,7 @@ opt_set_sys_var:
 
 创建租户后，您可以通过查询 `oceanbase.DBA_OB_TENANTS` 视图来确认租户是否创建成功。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看当前集群中是否有新创建的租户。
 
