--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
@@ -12,7 +12,7 @@
 
 ## 操作步骤
 
-1. 租户管理员登录到集群的 Oracle 租户。
+1. 租户管理员登录集群的 Oracle 租户。
 
 2. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `DELETE_CONSUMER_GROUP` 子程序删除资源组。
 
