--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md
@@ -22,7 +22,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 整个扩容操作的示例如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 依次在 `z1`、`z2`、`z3` 内各添加一台 OBServer。
 
