--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -4,7 +4,7 @@
 
 ## 增加 Primary Zone
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
