--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -55,7 +55,7 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
 主动切主的操作步骤如下：
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
