--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -156,7 +156,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
    ERROR 5039 (01007): User locked
    ```
 
-   使用 `root` 用户登录到数据库的 `sys` 租户，查看失败登录信息。
+   使用 `root` 用户登录集群的 `sys` 租户，查看失败登录信息。
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
