--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/7.parameters-of-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/7.parameters-of-data-backup.md
@@ -4,7 +4,7 @@
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 分别执行以下语句，获取备份相关的参数配置信息。
 
@@ -29,7 +29,7 @@
       edit_level: DYNAMIC_EFFECTIVE
       ```
 
-      配置项 `ha_low_thread_score` 用于指定备份、备份清理等中低先级别任务队列使用线程时间片的权重值，默认值为 `2`。如果发现数据备份的任务运行速度过慢，您可以适当提高配置项 `ha_low_thread_score` 的值，建议每次将数值翻倍。
+      配置项 `ha_low_thread_score` 用于指定备份、备份清理等中低优先级别任务队列使用线程时间片的权重值，默认值为 `0`。如果发现数据备份的任务运行速度过慢，您可以适当提高配置项 `ha_low_thread_score` 的值，建议每次将数值翻倍。
 
       设置备份时写文件系统的并发数的示例如下：
 
