--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -10,14 +10,14 @@
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. （可选）执行以下语句，设置备份的恢复密码。
 
    仅在数据备份时添加了密码的场景下才需要设置备份的恢复密码。
 
    ```shell
-   obclient [(none)]> SET DECRYPTION IDENTIFIED BY 'password'；
+   obclient [(none)]> SET DECRYPTION IDENTIFIED BY 'password';
    ```
 
    其中，`password` 需要替换为备份时添加的密码。如果全量备份和增量备份设置的密码不一样，则需要输入多个密码，密码之间使用英文逗号分隔（全量备份密码放在前面，增量备份密码放在后面）。
@@ -25,20 +25,12 @@
    示例：
 
    ```shell
-   obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******'；
+   obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******';
    
-   obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******','******'；
+   obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******','******';
    ```
 
-3. 设置配置项 `restore_concurrency`。
-
-   集群级配置项 `restore_concurrency` 用于控制恢复是否允许进行。默认值为 0，取值范围为 [0, 512]，值设置为大于 0 即可，该配置项将在 4.1 版本后废弃不再使用。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
-
-   ```shell
-   obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
-   ```
-
-4. 执行以下语句，开始执行恢复任务。
+3. 执行以下语句，开始执行恢复任务。
 
    语句如下：
 
@@ -114,7 +106,7 @@
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx,oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
-5. （可选）在待恢复租户对应的 Meta 租户创建成功后，如果需要加速恢复，可以通过配置项 `ha_low_thread_score` 配置恢复任务的后台调度权重。
+4. （可选）在待恢复租户对应的 Meta 租户创建成功后，如果需要加速恢复，可以通过配置项 `ha_high_thread_score` 配置恢复任务的后台调度权重。
 
    1. 通过 `oceanbase.DBA_OB_TENANTS` 视图查看待恢复租户对应的 Meta 租户是否创建成功。
 
@@ -128,14 +120,14 @@
 
       更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-   2. 设置配置项 `ha_low_thread_score`。
+   2. 设置配置项 `ha_high_thread_score`。
 
-      租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
+      租户级配置项 `ha_high_thread_score` 用于设置高可用高优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_high_thread_score` 的更多介绍，请参见 [ha_high_thread_score](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/41.ha_high_thread_score.md)。
 
       语句示例如下：
 
       ```shell
-      obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
+      obclient [(none)]> ALTER SYSTEM SET ha_high_thread_score =10 TENANT = mysql;
       ```
 
 ## 后续操作
