--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/2.resource-isolation-at-user-level-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/2.resource-isolation-at-user-level-for-oracle-mode.md
@@ -20,7 +20,7 @@
 
 以下示例中，将 `tp_user` 用户、`ap_user` 用户或 `ha_high` 任务、`ddl_high` 任务分别绑定在 `big_group` 和 `small_group` 2 个资源组上，再通过资源管理计划 `plan_a` 来控制不同用户或后台任务使用不同的 CPU 资源和 IOPS 资源。
 
-1. 租户管理员登录到集群的 Oracle 租户。
+1. 租户管理员登录集群的 Oracle 租户。
 
 2. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_CONSUMER_GROUP` 子程序创建资源隔离所需的 2 个资源组。
 
