--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
@@ -190,7 +190,7 @@ OceanBase 数据库执行计划中的各列的含义如下：
 
 OceanBase 数据库 `EXPLAIN` 命令输出的第一部分是执行计划的树形结构展示。其中每一个操作在树中的层次通过其在 `operator` 中的缩进予以展示，层次最深的优先执行，层次相同的以特定算子的执行顺序为标准来执行。
 
-上述 TPCDS Q3 示例的计划展示树如下:![p181620](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0105487461/p420556.png)
+上述 TPCDS Q3 示例的计划展示树如下:![p181620](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/sql-execution-plan-1.png)
 
 OceanBase 数据库 `EXPLAIN` 命令输出的第二部分是各操作算子的详细信息，包括输出表达式、过滤条件、分区信息以及各算子的独有信息（包括排序键、联接键、下压条件等）。示例如下：
 
