--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
@@ -76,7 +76,7 @@ PROCEDURE gather_index_stats (
 | statown          | 该参数暂未实现，不可用。    |
 | no_invalidate    | 该参数暂未实现，不可用。   |
 | stattype         | 该参数暂未实现，不可用。 |
-| force            | 是否强制收集信息，并忽略锁的状态，默认为 `FALSE`。   |
+| force            | 是否强制收集信息，并忽略锁的状态，默认为 `FALSE`。该参数只能在 PL 的 `BEGIN .... END` 里面执行。   |
 
 ### method_opt
 
