--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
@@ -173,7 +173,7 @@ obclient>SELECT t1.c1, t2.c1
 
   对于 `NOT IN`、`IN`、`NOT EXIST`、`EXIST`、`ANY` 和 `ALL` 子查询表达式都可以对应做类似的改写操作。
   
-#### **ANY/ALL 使用 MAX/MIN 改写**
+## ANY/ALL 使用 MAX/MIN 改写
 
 对于 `ANY`/`ALL` 的子查询，如果子查询中没有 `GROUP BY` 子句、聚集函数和 `HAVING` 条件时，以下表达式可以使用聚集函数 `MIN`/`MAX` 进行等价转换，其中 `col_item` 为单独列且有非 `NULL` 属性：
 
@@ -248,10 +248,9 @@ obclient> SELECT t1.c1, t2.c2 FROM t1 INNER JOIN t2 ON t1.c2 = t2.c2
             WHERE t2.c2 > 5;
 ```
 
-简化条件改写
----------------
+## 简化条件改写
 
-#### HAVING 条件消除
+### HAVING 条件消除
 
 如果查询中没有聚集操作和 `GROUP BY`，则 `HAVING` 可以合并到 `WHERE` 条件中，并将 `HAVING` 条件删除， 从而可以将 `HAVING` 条件在 `WHERE` 条件中统一管理，并做进一步优化。
 
@@ -285,7 +284,7 @@ Outputs & filters:
       access([t2.c1], [t2.c2]), partitions(p0)
 ```
 
-#### **等价关系推导**
+### 等价关系推导
 
 等价关系推导是指利用比较操作符的传递性，推倒出新的条件表达式，从而减少需要处理的行数或者选择到更有效的索引。
 
@@ -329,7 +328,7 @@ Outputs & filters:
       range_cond([t1.c1 > 2])
 ```
 
-#### **恒真/假消除**
+### 恒真/假消除
 
 对于如下恒真恒假条件可以进行消除：
 
@@ -388,7 +387,7 @@ Outputs & filters:
   obclient> (SELECT c1,c2 FROM t1) UNION (SELECT c3,c4 FROM t2);
   ```
 
-#### **LIMIT 下压**
+### LIMIT 下压子查询
 
 `LIMIT` 下压改写是指将 `LIMIT` 下降到子查询中，OceanBase 数据库现在支持在不改变语义的情况下，将 `LIMIT` 下压到视图（示例 1）或 `UNION` 对应的子查询（示例 2）中。
 
@@ -408,7 +407,100 @@ obclient> (SELECT c1,c2 FROM t1) UNION ALL (SELECT c3,c4 FROM t2) LIMIT 5;
 obclient> (SELECT c1,c2 FROM t1 LIMIT 5) UNION ALL (SELECT c3,c4 FROM t2 limit 5) LIMIT 5;
 ```
 
-#### **DISTINCT 消除**
+### LIMIT 下压外连接或交叉连接
+
+对于外连接和交叉连接，如果 SQL 语句中没有 `WINDOW FUNCTION`、`DISTINCT`、`GROUP BY` 或 `HAVING`，且 `WHERE` 条件或者 `ORDER BY` 仅和连接的一侧表有关或者不含 `WHERE`条件和 `ORDER BY` 时，可将 `LIMIT` 语句下压到连接的表的一侧（外连接）或多侧（多表交叉连接），这种改写方式称为 `LIMIT` 下压外连接或交叉连接。通过 `LIMIT` 下压，可有效减少连接的行数，从而降低执行查询的开销。
+
+对于外连接，在下压 `LIMIT` 时，会在被下压的表上封装一层视图，如下以左外连接的 Q1 查询为例：
+
+```sql
+Q1:
+SELECT * FROM t1 LEFT JOIN t2 ON t1.c1 = t2.c1 LIMIT 1;
+==>
+Q2:
+SELECT * FROM V LEFT JOIN t2 ON t1.c1 = t2.c1 LIMIT 1;
+V: (SELECT * FROM t1 LIMIT 1);
+```
+
+Q1 查询不含上面提到的限制，且没有 `WHERE`条件和 `ORDER BY` 语句，因此可在左侧表 `t1` 上封装一层视图`V`，并将 `LIMIT 1` 封装到视图 `V` 中，从而改写为 Q2 查询。需要注意的是 `LIMIT` 下压后，原先的 `LIMIT` 也必须保留。改写后的计划如下：
+
+```sql
+=============================================
+|ID|OPERATOR         |NAME   |EST. ROWS|COST|
+---------------------------------------------
+|0 |LIMIT            |       |1        |4   |
+|1 | MERGE OUTER JOIN|       |1        |4   |
+|2 |  SUBPLAN SCAN   |VIEW1  |1        |2   |
+|3 |   TABLE SCAN    |t1(idx)|1        |2   |
+|4 |  SORT           |       |1        |2   |
+|5 |   TABLE SCAN    |t2     |1        |2   |
+=============================================
+Outputs & filters: 
+-------------------------------------
+0 - output([1]), filter(nil), rowset=256, limit(1), offset(nil)
+1 - output(nil), filter(nil), rowset=256, 
+equal_conds([VIEW1.t1.c1 = t2.c1]), other_conds(nil)
+2 - output([VIEW1.t1.c1]), filter(nil), rowset=256, 
+access([VIEW1.t1.c1])
+3 - output([t1.c1]), filter(nil), rowset=256, 
+access([t1.c1]), partitions(p0), 
+limit(1), offset(nil)
+4 - output([t2.c1]), filter(nil), rowset=256, sort_keys([t2.c1, ASC])
+5 - output([t2.c1]), filter(nil), rowset=256, 
+access([t2.c1]), partitions(p0)
+```
+
+同理，右外连接可在满足上述条件的情况下，将 `LIMIT` 下压到右表中。
+
+对于交叉连接，则可将 `LIMIT` 下压到交叉连接的两侧，示例如下：
+
+```sql
+Q3:
+SELECT 1 FROM t1, t2 WHERE t1.c1 > 0 ORDER BY t1.c1 LIMIT 1;
+==>
+Q4:
+SELECT 1 FROM V1, V2 LIMIT 1;
+V1: SELECT 1 FROM t1 WHERE t1.c1 > 0 ORDER BY t1.c1 LIMIT 1; 
+V2: SELECT 1 FROM t2 LIMIT 1; 
+```
+
+Q3 查询中不含上述 `LIMIT` 下压外连接时提到的限制，且仅含 `t1` 表上的 `WHERE`条件和 `ORDER BY`，则可分别在 `t1` 和 `t2` 表上创建视图 `V1` 和 `V2`，然后将 `LIMIT` 下压到视图中，从而改写为查询 Q4。改写后的计划如下：
+
+```sql
+=====================================================
+|ID|OPERATOR                   |NAME |EST. ROWS|COST|
+-----------------------------------------------------
+|0 |LIMIT                      |     |1        |5   |
+|1 | NESTED-LOOP JOIN CARTESIAN|     |1        |5   |
+|2 |  SUBPLAN SCAN             |VIEW1|1        |3   |
+|3 |   TOP-N SORT              |     |1        |3   |
+|4 |    TABLE SCAN             |t1   |3        |3   |
+|5 |  MATERIAL                 |     |1        |2   |
+|6 |   SUBPLAN SCAN            |VIEW2|1        |2   |
+|7 |    TABLE SCAN             |t2   |1        |2   |
+=====================================================
+Outputs & filters: 
+-------------------------------------
+  0 - output([1]), filter(nil), rowset=256, limit(1), offset(nil)
+  1 - output(nil), filter(nil), rowset=256, 
+      conds(nil), nl_params_(nil)
+  2 - output(nil), filter(nil), rowset=256, 
+      access(nil)
+  3 - output([t1.c1]), filter(nil), rowset=256, sort_keys([t1.c1, ASC]), topn(1)
+  4 - output([t1.c1]), filter([t1.c1 > 0]), rowset=256, 
+      access([t1.c1]), partitions(p0)
+  5 - output(nil), filter(nil), rowset=256
+  6 - output(nil), filter(nil), rowset=256, 
+      access(nil)
+  7 - output([1]), filter([t2.c1 > 0]), rowset=256, 
+      access([t2.c1]), partitions(p0), 
+      limit(1), offset(nil)
+```
+
+对于多表连接且满足上述条件的 SQL 查询，可以分别甚至多次应用外连接 `LIMIT` 下压和交叉连接 `LIMIT` 下压，从而扩展改写的空间，达到更优的改写效果。
+
+
+### DISTINCT 消除
 
 * 如果 Select Item 中只包含常量，则可以消除 `DISTINCT`，并加上 `LIMIT 1`。
 
@@ -463,7 +555,7 @@ obclient> (SELECT c1,c2 FROM t1 LIMIT 5) UNION ALL (SELECT c3,c4 FROM t2 limit 5
         access([t2.c1], [t2.c2], [t2.c3]), partitions(p0)
   ```
 
-#### **MIN/MAX 改写**
+### MIN/MAX 改写
 
 * 当 `MIN`/`MAX` 函数中的参数为索引前缀列，且不含 `GROUP BY` 时，可将该 `scalar aggregate` 转换为走索引扫描 1 行的情况，如下例所示：
 
