--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/70.quote-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/70.quote-of-mysql-mode.md
@@ -12,7 +12,7 @@ quote(str)
 
 对于一般情况，返回的字符串会在原字符串前后加单引号（`'`）。
 
-对于每个反斜杠（`/`）、单引号（`'`）、ASCII 编码的 `NUL` 值与 `Control+Z`，会在前面加反斜杠（`/`）。
+对于每个反斜杠（`\`）、单引号（`'`）、ASCII 编码的 `NUL` 值与 `Control+Z`，会在前面加反斜杠（`\`）。
 
 如果参数为 `NULL`，则返回值为不包括单引号的 `'NULL'` 字符串。
 
