--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/9.views-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/9.views-of-log-archive.md
@@ -37,7 +37,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | STATUS                       | 归档状态                                            |
 | START_SCN                    | 归档开始的 SCN                                      |
 | START_SCN_DISPLAY            | 将 `START_SCN` 转换成时间单位之后的展示             |
-| CHECKPOINT_SCN               | 当前已归档的的 SCN                                  |
+| CHECKPOINT_SCN               | 当前已归档的 SCN                                  |
 | CHECKPOINT_SCN_DISPLAY       | 将 `CHECKPOINT_SCN` 转换成时间单位之后的展示        |
 | COMPATIBLE                   | 归档的兼容版本号                                    |
 | BASE_PIECE_ ID               | 该轮归档的首个 piece_id                             |
@@ -70,7 +70,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | STATUS                       | 归档状态                                           |
 | START_SCN                    | 归档开始的 SCN                                     |
 | START_SCN_DISPLAY            | 将 `START_SCN` 转换成时间单位之后的展示            |
-| CHECKPOINT_SCN               | 当前已归档的的 SCN                                 |
+| CHECKPOINT_SCN               | 当前已归档的 SCN                                 |
 | CHECKPOINT_SCN_DISPLAY       | 将 `CHECKPOINT_SCN` 转换成时间单位之后的展示           |
 | COMPATIBLE                   | 归档的兼容版本号                                   |
 | BASE_PIECE_ID                | 该轮归档的首个 piece_id                            |
@@ -104,7 +104,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | STATUS                       | 归档状态                                           |
 | START_SCN                    | 归档开始的 SCN                                     |
 | START_SCN_DISPLAY            | 将 `START_SCN` 转换成时间单位之后的展示            |
-| CHECKPOINT_SCN               | 当前已归档的的 SCN                                 |
+| CHECKPOINT_SCN               | 当前已归档的 SCN                                 |
 | CHECKPOINT_SCN_DISPLAY       | 将 `CHECKPOINT_SCN` 转换成时间单位之后的展示           |
 | COMPATIBLE                   | 归档的兼容版本号                                   |
 | BASE_PIECE_ID                | 该轮归档的首个 piece_id                            |
@@ -137,7 +137,7 @@ OceanBase 数据库支持通过各种视图查看归档的相关信息。
 | STATUS                       | 归档状态                                           |
 | START_SCN                    | 归档开始的 SCN                                     |
 | START_SCN_DISPLAY            | 将 `START_SCN` 转换成时间单位之后的展示            |
-| CHECKPOINT_SCN               | 当前已归档的的 SCN                                 |
+| CHECKPOINT_SCN               | 当前已归档的 SCN                                 |
 | CHECKPOINT_SCN_DISPLAY       | 将 `CHECKPOINT_SCN` 转换成时间单位之后的展示           |
 | COMPATIBLE                   | 归档的兼容版本号                                   |
 | BASE_PIECE_ID                | 该轮归档的首个 piece_id                            |
