--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
@@ -8,7 +8,7 @@
 
 |             参数名              |         默认值         |            取值范围             |     说明      |
 |------------------------------|---------------------|-----------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| app_name        | dropship            | -              | OBProxy 服务的的应用名。            |
+| app_name        | dropship            | -              | OBProxy 服务的应用名。            |
 | automatic_match_work_thread  | true                | <ul><li>true</li> <li>false</li></ul>       | 判断是否根据 CPU 核数自动创建工作线程。如果该选项为 true，上限为 work_thread_num。            |
 | block_thread_num             | 1      | \[1, 4\]       | OBProxy 阻塞型任务线程数，用于线程初始化。             |
 | enable_cpu_topology          | false               | <ul><li>true</li> <li>false</li></ul>       | 是否开启 CPU 亲和，即是否把每个 worker 线程绑定到不同的 CPU 上。          |
