410 同步 pre 更新内容

--- a/zh-CN/7.reference/7.command-line-tools/9.ob-error.md
+++ b/zh-CN/7.reference/7.command-line-tools/9.ob-error.md
@@ -2,57 +2,70 @@
 
 `ob_error` 是 OceanBase 数据库的一个错误码解析工具，`ob_error` 可以根据您输入的错误码返回相对应的原因和解决方案。在 `ob_error` 的帮助下，您无需查找文档即可获取基本的错误信息。
 
-## 如何构建
+## 安装 ob_error
 
-### YUM 安装
+### 通过 YUM 命令安装
 
-```bash
+您可以通过 YUM 命令直接安装工具集成包（OceanBase Utils），进行 ob_error 的使用。
+
+```shell
 yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
 yum install oceanbase-ce-utils
 ```
 
-### Debug 模式
+### 通过 OceanBase Utils 安装包
 
-```bash
-bash build.sh debug --init
-cd build_debug
-make ob_error
-cp tools/ob_error/src/ob_error /usr/local/bin
-```
+您可以通过安装工具集成包（OceanBase Utils），进行 ob_error 的使用。
 
-`ob_error` 的编译产物默认存储在 `DEBUG_BUILD_DIR/tools/ob_error/src/ob_error` 中。
+1. 访问 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 页面，搜索 `OceanBase Utils`，下载需要的版本到本地。
 
-### Release 模式
+2. 在文件目录里执行以下命令安装 OceanBase Utils。
 
-```bash
-bash build.sh release --init
-cd build_release
-make ob_error
-cp tools/ob_error/src/ob_error /usr/local/bin
-```
+   ```shell
+   rpm -ivh  oceanbase-ce-utils-<version>
+   ```
 
-`ob_error` 的编译产物默认存储在 `RELEASE_BUILD_DIR/tools/ob_error/src/ob_error` 中。
+   如果您只需要 `ob_error`，可使用 `rpm2cpio` 命令来获取 `ob_error`。
 
-### RPM 安装包
+   ```bash
+   rpm2cpio oceanbase-ce-utils-<version> | cpio -idmv ./usr/bin/ob_error
+   cp usr/bin/ob_error /usr/local/bin
+   ```
 
-`ob_error` 在安装包 `oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm` 中提供，您可访问 [下载页面](https://open.oceanbase.com/softwareCenter/community) 下载该安装包。
-之后可运行以下命令进行安装：
+### 通过源码编译
 
-```bash
-rpm -ivh oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm
-```
+您可通过 OceanBase 数据库的源码自行编译。
 
-如果您只需要 `ob_error`，可使用 `rpm2cpio` 命令来获取 `ob_error`。
+1. 克隆 [OceanBase 数据库](https://github.com/oceanbase/oceanbase) 的开源代码到本地。
 
-```bash
-rpm2cpio oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm | cpio -idmv ./home/admin/oceanbase/bin/ob_error
-cp home/admin/oceanbase/bin/ob_error /usr/local/bin
-```
+    ```shell
+    git clone https://github.com/oceanbase/oceanbase
+    ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>版本号后期可能会发生变化，请您以实际版本为准。</p>
-  </main>
+2. 两种模式编译 ob_error。
+
+    * Debug 模式
+
+      ```shell
+      bash build.sh debug --init
+      cd build_debug
+      make ob_error
+      cp tools/ob_error/src/ob_error /usr/local/bin
+      ```
+
+      `ob_error` 的编译产物默认存储在 `DEBUG_BUILD_DIR/tools/ob_error/src/ob_error` 中。其中，`DEBUG_BUILD_DIR` 表示编译目录，在本示例中是 `build_debug`。
+
+    * Release 模式
+
+      ```shell
+      bash build.sh release --init
+      cd build_release
+      make ob_error
+      cp tools/ob_error/src/ob_error /usr/local/bin
+      ```
+
+      `ob_error` 的编译产物默认存储在 `RELEASE_BUILD_DIR/tools/ob_error/src/ob_error` 中。其中，`RELEASE_BUILD_DIRR` 表示编译目录，在本示例中是 `build_release`。
+
 
 ## 如何使用
 
