--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
@@ -1,5 +1,31 @@
 # 租户内部内存管理
 
+## 内存分配
+
+### 系统租户
+
+系统租户是 OceanBase 数据库的集群管理员为安装 OceanBase 数据库时自动创建，系统租户的内存大小是由默认资源单元 `sys_unit_config` 的规格定义的，其默认值的计算公式为 `min((memory_limit - system_memory)/4, 16G)`，因为这是一个正常的租户，所以可以通过 `alter resource` 修改租户规格大小。
+
+### 用户租户
+
+用户租户内存由租户创建 Unit 时其 `memory_size` 的大小定义的，`memory_size` 为用户租户的整体内存大小，其内存包含用户租户本身的内存和其对应 Meta 租户的内存。在创建用户租户时，其允许创建的最小内存由隐藏配置项 `__min_full_resource_pool_memory` 控制，其默认值为 5G，取值范围为 `[1073741824,+∞)`。
+
+用户租户本身的内存和其对应的 Meta 租户的内存可以分为装载增量数据的 MemStore 以及 KVCache 缓存。关于装载增量数据的 MemStore 的详细内容，参见 [不可动态伸缩的内存管理](#不可动态伸缩的内存管理)，关于 KVCache 缓存的详细内容，参见 [可动态伸缩的内存管理](#可动态伸缩的内存管理)。
+
+### Meta 租户
+
+Meta 租户的内存资源不支持共享，Meta 租户和用户租户的内存资源需要隔离。默认 Meta 租户占整体租户规格的 10%。为了保证 Meta 租户正常运行，Meta 租户内存资源规格最小为 512M，不设最大值。整体租户内存规格减去 Meta 租户内存规格即为用户租户的内存规格。整体租户规格最小值调整为 1G。下面举例说明：
+
+* 租户规格大于等于 10G 时，Meta 租户和用户租户内存规格比例为 1:9。
+
+* 租户规格大于等于 2G 时，Meta 租户的内存规格固定为 1G，剩余资源给用户租户。
+
+* 租户规格小于 2G 时，Meta 租户固定分配 512M，剩余资源给用户租户。
+
+* 租户规格最小 1G，Meta 租户占用 512M，用户租户占用 512M。
+
+## 内存管理
+
 OceanBase 数据库把租户内部的内存总体上分为以下两个部分：
 
 * 不可动态伸缩的内存
@@ -10,20 +36,20 @@ OceanBase 数据库把租户内部的内存总体上分为以下两个部分：
 
 除此之外，还有很多内存组件，包括 Plan Cache（执行计划缓存）、SQL Area（SQL 执行期内存）、选举动作等，都要占用一定量的内存。您可以通过查询 `oceanbase.GV$OB_MEMORY` 视图来获取所有内存组件的使用情况。
 
-## 不可动态伸缩的内存管理
+### 不可动态伸缩的内存管理
 
-目前与不可动态伸缩内存相关的配置只有只有 `memstore_limit_percentage` 和 `ob_sql_work_area_percentage`，前者表示租户的 MemStore 部分最多占租户总内存上限的百分比，默认值为租户 `memory_size` 的 50%，后者表示 sql 执行过程中的内存占用，默认为租户 `memory_size` 的 5%。
+目前与不可动态伸缩内存相关的配置只有 `memstore_limit_percentage` 和 `ob_sql_work_area_percentage`，前者表示租户的 MemStore 部分最多占租户总内存上限的百分比，默认值为租户 `memory_size` 的 50%，后者表示 SQL 阻塞算子工作区内存占用上限，默认为租户 `memory_size` 的 5%。
 
 租户的写入或者更新会增加 MemStore 的内存使用，当租户的 MemStore 部分内存到达上限以后，后续的写入或者更新操作将会被拒绝。
 
 OceanBase 数据库会根据 MemStore 的内存使用比例决定何时进行转储或者合并释放 MemStore 的内存，该比例由配置项 `freeze_trigger_percentage` 控制，表示当 MemStore 内存占用到达其上限的百分比后就进行冻结（转储和合并的前置动作），默认值为租户 MemStore 内存上限的 70%，即租户 `memory_size` 的 35%。
 
-  <main id="notice" type='explain'>
+<main id="notice" type='explain'>
     <h4>说明</h4>
     <p><code>memory_size</code> 是租户可使用的内存，您可以根据业务实际情况配置。</p>
-  </main>
+</main>
 
-## 可动态伸缩的内存管理
+### 可动态伸缩的内存管理
 
 可动态伸缩的 KVCache 会尽量使用除去不可动态伸缩后租户的全部内存，当租户内存满时，会优先从 KVCache 中淘汰未被引用的内存来使用。
 
