--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/8.view-memory-usage.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/8.view-memory-usage.md
@@ -121,20 +121,20 @@ obclient> SELECT tenant_id, CTX_NAME, hold FROM oceanbase.GV$OB_MEMORY WHERE svr
 
 ```sql
 obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND svr_port=2882 AND tenant_id = 1002 ORDER BY hold desc limit 10;
-+-----------+----------------+----------+-----------------+-------+-----------+-----------+-------------+------------+
-| TENANT_ID | SVR_IP         | SVR_PORT | CONTEXT         | COUNT | HOLD      | USED      | ALLOC_COUNT | FREE_COUNT |
-+-----------+----------------+----------+-----------------+-------+-----------+-----------+-------------+------------+
-|      1002 |   xx.xx.xx.xx  |     2882 | SqlPhyPlan      |  9299 | 143297472 | 126618229 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | MysqlRequesReco |     4 |  86261760 |  86239232 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | LogGroupBuffer  |     2 |  83927040 |  83886080 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | Memstore        |    31 |  64503808 |  64474296 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | CACHE_MAP_NODE  |     8 |  16646144 |  16637952 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | MetaAllocator   |   722 |  14385792 |  12179684 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | OmtTenant       |    42 |  10674448 |  10631028 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | SqlPlanCache    |   664 |   7868160 |   7515456 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | PoolFreeList    |     8 |   5250880 |   5224352 |           0 |          0 |
-|      1002 |   xx.xx.xx.xx  |     2882 | SqlPlanMon      |     3 |   5021696 |   4977920 |           0 |          0 |
-+-----------+----------------+----------+-----------------+-------+-----------+-----------+-------------+------------+
++-----------+----------------+----------+-------------------+-----------------+-------+------------+-----------+
+| TENANT_ID | SVR_IP         | SVR_PORT | CTX_NAME          | MOD_NAME        | COUNT | HOLD       | USED      |
++-----------+----------------+----------+-------------------+-----------------+-------+------------+-----------+
+|      1002 | 172.30.135.204 |     2882 | KVSTORE_CACHE_ID  | KvstorCacheMb   |   498 | 1044381696 |         0 |
+|      1002 | 172.30.135.204 |     2882 | PLAN_CACHE_CTX_ID | SqlPhyPlan      |  7069 |  135522752 | 120440953 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | MysqlRequesReco |    11 |  100827136 | 100797440 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | IoControl       |    37 |  100143104 | 100086048 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | LogGroupBuffer  |     2 |   83927040 |  83886080 |
+|      1002 | 172.30.135.204 |     2882 | CO_STACK          | CoStack         |   156 |   79233024 |  79082016 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | ServerObjecPool |     1 |   63983616 |  63963136 |
+|      1002 | 172.30.135.204 |     2882 | MEMSTORE_CTX_ID   | Memstore        |    21 |   43696128 |  43676136 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | SqlDtl          |   191 |   23449216 |  21915426 |
+|      1002 | 172.30.135.204 |     2882 | DEFAULT_CTX_ID    | SqlPlanManger   |    54 |   23281664 |  22815744 |
++-----------+----------------+----------+-------------------+-----------------+-------+------------+-----------+
 10 rows in set
 ```
 
